--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-intl": "^5.8.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.0.4",
     "react-transition-group": "^1.2.1",
     "styled-components": "^5.2.0"
